--- a/Week2/Practical week 2.ipynb
+++ b/Week2/Practical week 2.ipynb
@@ -164,10 +164,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you Manana?\n"
+     ]
+    }
+   ],
+   "source": [
+    "run week2/Problem7w2.py"
+   ]
   }
  ],
  "metadata": {
